feat: optimize code

--- a/tests/test.toml
+++ b/tests/test.toml
@@ -2,6 +2,6 @@
 connection = "mysql"
 host = "localhost"
 port = "3306"
-database = "goal-migration"
+database = "goal"
 username = "root"
 password = 123456
